@@ -1,5 +1,6 @@
 17 January 2014: Wouter
 	- Fix type CAA.
+	- nsid can be set with "ascii_somestring" in ascii.
 
 16 January 2014: Wouter
 	- Unit test for WKS failure.
